# regex-applicative

./: regex-applicative.cabal  stack.yaml
Text/Regex/: Applicative.hs
Text/Regex/Applicative/: Common.hs  Compile.hs  Interface.hs  Object.hs  Original.hs  Reference.hs  StateQueue.hs  Types.hs
Text/Regex/Applicative/Original/: Common.hs  Compile.hs  Interface.hs  Object.hs  StateQueue.hs  Types.hs
tests/: StateQueue.hs  test.hs
